# fun_mini_projects

./: README.md  where_was_i.ipynb
geo_visited/: where_was_i.ipynb  where_was_i_continents.ipynb
image_route_viz/: README.md  Route_viz.ipynb
streamlit_examples/: README.md  custom_model.py  image_upload.py  pyproject.toml  resnet_pretrained.py
streamlit_examples/custom_model/: model_classes.txt
visited countries visualization/: where_was_i.ipynb
