[tool.poetry]
name = "streamlit-test"
version = "0.1.0"
description = ""
authors = ["asyafEvinced <asya.frumkin@evinced.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.4.0"
pandas = "^1.3.5"
torch = "^1.10.1"
torchvision = "^0.11.2"
wget = "^3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
